syntax = "proto3";

package vn.trinhtung.grpc;

option java_package = "vn.trinhtung.grpc";
option java_multiple_files = true;

import "seat_type.proto";

//message SeatTypeResponse {
//  int32 id = 1;
//  string name = 2;
//  string color = 3;
//}

message SeatResponse {
  int32 id = 1;
  int32 row_index = 2;
  int32 column_index = 3;
  string name = 4;
  SeatTypeResponse seat_type = 5;
}

message GetSeatsByHallRequest {
  int32 hall_id = 1;
}

message GetSeatsByHallResponse {
  repeated SeatResponse seats = 1;
}

message GetSeatsByIdsRequest {
  repeated int32 ids = 1;
}

message GetSeatsByIdsResponse {
  repeated SeatResponse seats = 1;
}

service SeatService {
  rpc getSeatsByHall(GetSeatsByHallRequest) returns (GetSeatsByHallResponse);

  rpc getSeatsByIds(GetSeatsByIdsRequest) returns (GetSeatsByIdsResponse);
}